refactor(ProductService): .toList()로 코드 단순화